grid tweaks, box shadow on all widgets, fixed alignment of elements inside widgets

--- a/styles/chatWidget_styles.css
+++ b/styles/chatWidget_styles.css
@@ -1,3 +1,12 @@
+/* Styles specific to Chat Widget */
+
+.chatWidget {
+    width: 90%;
+    /* This overrides the generic max-width for all widgets since the chat widget spans two columns */
+    max-width: 90% 
+
+}
+
 .chatWidget__author {
     font-weight: 500;
     color: darkblue;
@@ -9,7 +18,6 @@
     flex-grow: 0;
     justify-content: right;
     margin: .2em;
-    /* padding: 2px 6px 3px; */
 }
 
 .chatWidget__msg {
@@ -18,6 +26,7 @@
     flex-direction: row;
 }
 
+/* Let the main content of the chat message fill all available area between user name and edit button as the container grows and shrinks. */
 .chatWidget__content {
     flex-grow: 1;
     margin: .1em;
@@ -25,11 +34,11 @@
 
 .chatWidget__text {
     width: 80%;
+    margin-left: .1em; 
 }
 
-.chatWidget {
-    width: 80%;
-    /* max-width: 700px; */
+.chatContainer {
+    width: 99%
 }
 
 
