--- a/styles/widget_styles.css
+++ b/styles/widget_styles.css
@@ -1,12 +1,16 @@
+/* Styles for ALL widgets */
+
 .widget {
     border: 1px solid rgb(128, 128, 128);
     background-color: rgb(32, 109, 252);
     height: 200px;
-    /* max-height: 200px; */
+    border-radius: 3px;
     width: 95%;
-    /* max-width: 400px; */
-    padding: .4em;
+    max-width: 675px;
+    padding: .8em .5em;
     color: white;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+	box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 .widgetContainer {
@@ -14,15 +18,20 @@
     /* border: 2px solid grey; */
     overflow-y: auto;
     height: 150px;
-    width: 95%;
+    width: 98%;
     padding: .3em;
-    margin: 0 auto .3em;
+    margin: 0 auto .4em;
     /* margin-bottom: .3em; */
     border-radius: 3px;
     border: 1px solid transparent;
     border-top: none;
     /* border-bottom: 1px solid #DDD; */
     box-shadow: inset 0 2px 3px rgba(0,0,0,.39), 0 -1px 1px rgb(211, 211, 211), 0 2px 0 rgb(211, 211, 211);
+}
+
+.widgetHeader {
+    margin-bottom: .3em;
+    text-transform: uppercase;
 }
 
 /* grid structure for widgets */
@@ -32,7 +41,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
-    justify-items: center;
+    justify-items: space-around;
     grid-gap: 1em;
     grid-template-areas: 
     "tasks news"
@@ -58,7 +67,6 @@
 .chatWidget {
     grid-area: chat;
     justify-self: center;   
-    
 }
 
 /* Task Widget Styling - could be applied globally */
@@ -77,6 +85,8 @@
     border: 1px solid white;
     margin: 5px;
 }
+
+
 
 
 
